update index.astro file with correct information

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -20,8 +20,8 @@ const posts = (await getCollection("blog"))?.sort(
 </script>
 
 <Layout
-  title="Gianmarco Cavallo - Blog"
-  description="Software developer with strong focus on the user experience animations and micro interactions"
+  title="Joshua Larsen - Blog"
+  description="AI Engineer with a knack for tackling intractible problems with systems thinking and the latest tech in AI. My personal blog. I write about my journey and my journey to becoming a full stack developer."
 >
   <main
     class="w-screen h-screen flex flex-col justify-start items-start max-w-3xl mx-auto p-8"
