update AboutMe.astro page with correct information

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -6,28 +6,27 @@ import Card from "./Card/index.astro";
   <div class="flex flex-col gap-2">
     <div class="text-sm font-light">
       <p>
-        Hi, I'm Gianmarco, a front-end software developer from Italy.
+        Hi, I'm Joshua, an AI Engineer based on the West Coast.
         <br />
         My primary tools of choice includes:
       </p>
       <ul class="list-disc list-inside">
-        <li>JavaScript</li>
-        <li>React</li>
-        <li>Solidjs</li>
+        <li>Python</li>
         <li>Astro</li>
-        <li>svelte</li>
-        <li>Nodejs</li>
+        <li>Svelte</li>
+        <li>C</li>
+        <li>LLMs</li>
       </ul>
     </div>
     <p class="text-sm font-light">
-      Beyond coding, I'm passionate about design, illustration, animation and 3D modelling and traveling.
-      An unusual hobby of mine is collecting vintage passports, they're
-      interesting pieces of history to me.
+      Outside of coding, I enjoy reading deeply, writing, learning new sports, spending time outside and building things.
+      I'm always looking for new projects to work on.
+      <br />
+      I'm currently looking for a full-time positions to flex my AI Engineering skills.
     </p>
     <p class="text-sm font-light">
-      While I have some preferred tools, I always choose the best one for the
-      job, even if it's not on my usual list. My goal is to find the right
-      solution for each project.
+      Although I have my go-to tools, I'm always exploring new tech stacks.
+      If you have a project you'd like me to work on, please get in touch.
     </p>
   </div>
 </Card>
