--- a/src/components/ContactsCard.astro
+++ b/src/components/ContactsCard.astro
@@ -12,8 +12,8 @@ import { LINKS } from "../lib/constants";
     </header>
     <address class="flex flex-col mt-4">
       <h2 class="text-gray-500">Contact Details</h2>
-      <p>cavallogianmarco@gmail.com</p>
-      <p>Italy</p>
+      <p>mail@joshualarsen.dev</p>
+      <p>West Coast</p>
     </address>
     <div class="flex flex-col mt-4 w-fit">
       <h2 class="text-gray-500">Socials</h2>
@@ -25,10 +25,10 @@ import { LINKS } from "../lib/constants";
           <a href={LINKS.github} target="_blank">Github</a>
         </li>
         <li>
-          <a href={LINKS.medium} target="_blank">Medium</a>
+          <a href={LINKS.substack} target="_blank">Substack</a>
         </li>
         <li>
-          <a href={LINKS.discord} target="_blank">Discord</a>
+          <a href={LINKS.x} target="_blank">X</a>
         </li>
       </ul>
     </div>
