--- a/src/components/IntroCard.astro
+++ b/src/components/IntroCard.astro
@@ -13,9 +13,11 @@ import { Image } from "astro:assets";
       <div class="flex flex-col h-full">
         <h6 class="text-sm font-light m-0 text-gray-500">welcome</h6>
         <p class="m-0 font-light text-xl">
-          Hi, I'm <b class="font-bold">Gianmarco Cavallo</b>, a software
-          developer with strong focus on the user experience, animations and
-          micro interactions
+          Hi, I'm <b class="font-bold">Joshua Larsen</b>, an AI Engineer based on the West Coast.
+          <br />
+          I'm currently looking for a full-time positions to flex my AI Engineering skills.
+          <br />
+          If you have a project you'd like me to work on, please get in touch.
         </p>
       </div>
       <div class="flex gap-4">
@@ -31,10 +33,10 @@ import { Image } from "astro:assets";
             <span class="sr-only">Linkedin Profile</span>
           </Button>
         </a>
-        <a href={LINKS.dribble} aria-label="dribble profile" target="_blank">
-          <Button aria-label="dribble profile">
-            <Icon name="ri:dribbble-fill" class="h-6" />
-            <span class="sr-only">Dribble Profile</span>
+        <a href={LINKS.substack} aria-label="substack profile" target="_blank">
+          <Button aria-label="substack profile">
+            <!-- <Icon name="ri:substack-fill" class="h-6" /> -->
+            <span class="sr-only">Substack Profile</span>
           </Button>
         </a>
         <Tooltip client:visible>
